xx/xx/2011 MythBox 1.0.3
-----------------------------

  New
    - Recording schedules now sortable by Title, # Recorded, or Priority
    - # Recorded column added to the Recording Schedules window
    - Selecting an upcoming recording in the TV Guide allows you to
      edit its recording schedule
    - Issue 155 - User Jobs added to the Create/Edit Schedule window
    - Recording Profile added to Create/Edit Schedule window
    - TVDB banners added to Watch TV and TV Guide windows
    - Optimized retrieval of upcoming recordings based on schedule
      change events from the backend
    - Google Image Search updated with API key and size restrictions
    - Added Playback tab to the Settings window to allow configuration of
      the XBMC's advancedsettings.xml for:
       * Small Skip Forward 
       * Small Skip Backward
       * Big Skip Forward
       * Big Skip Backward
    
  Fixed
    - Issue 161 - schedule from TV Guide impossible if show category 
      contains (french) accented characters
    - Some 1080i ATSC recordings from a HD Homerun were incorrectly
      getting commskipped due to incorrect fps detection
    - Twitter newsfeed no longer renders linebreaks which were causing
      multiline output
	  
1/25/2011 - MythBox 1.0.2
-----------------------------
  New
    - Issue 148 - Dutch translations (tnx Fred van Zwieten)
    
  Fixed
    - Issue 145 - Fixed unicode error in Live TV window 
    - Issue 147 - Changes to the recording schedule do not take effect immediately
    - Issue 149 - Help text on Settings screen gets truncated based on the translation
    - Added support for ScheduleType.NOT_RECORDING
    - TVRage grabber more resilient to incomplete season and episode information
    - Google image search now works for programs with unicode chars in the title
    
1/13/2011 - MythBox 1.0.1
-----------------------------
  New
    - Issue 132 - Support for MythTV 0.24 except for LiveTV (thx mitch capper)